--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -6,6 +6,9 @@
     top: 0;
     z-index: 3;
     min-height: 500px;
+    @media (max-width: 800px) {
+      display: flex;
+    }
   
     .logo {
       display: block;
